AB#3181 PB#969 moving configs

--- a/services/.env.example
+++ b/services/.env.example
@@ -28,22 +28,21 @@ URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 EXTERNAL_121_SERVICE_URL=
 
 
-# SECRETS
-121_SERVICE_SECRETS_SECRET=secret-key
-121_SERVICE_USERCONFIG_passwordAdmin=password
-121_SERVICE_USERCONFIG_emailAdmin=admin@example.org
-121_SERVICE_USERCONFIG_passwordAidWorker=password
-121_SERVICE_USERCONFIG_emailAidWorker=aidworker@example.org
-121_SERVICE_USERCONFIG_passwordProjectOfficer=password
-121_SERVICE_USERCONFIG_emailProjectOfficer=project-officer@example.org
-121_SERVICE_USERCONFIG_passwordProgramManager=password
-121_SERVICE_USERCONFIG_emailProgramManager=program-manager@example.org
-121_SERVICE_USERCONFIG_countryId=1
+# 121 service - secrets
+A121_SERVICE_SECRETS_SECRET=secret-key
 
-#THIRD PARTY TOKENS
-121_SERVICE_TWILIO=1
-121_SERVICE_INTERSOLVE=1
-121_SERVICE_AFRICASTALKING=1
+A121_SERVICE_USERCONFIG_passwordAdmin=password
+A121_SERVICE_USERCONFIG_emailAdmin=admin@example.org
+A121_SERVICE_USERCONFIG_passwordAidWorker=password
+A121_SERVICE_USERCONFIG_emailAidWorker=aidworker@example.org
+A121_SERVICE_USERCONFIG_passwordProjectOfficer=password
+A121_SERVICE_USERCONFIG_emailProjectOfficer=project-officer@example.org
+A121_SERVICE_USERCONFIG_passwordProgramManager=password
+A121_SERVICE_USERCONFIG_emailProgramManager=program-manager@example.org
+A121_SERVICE_USERCONFIG_countryId=1
+
+#121-service - 3rd Party Tokens
+A121_SERVICE_TOKENS=
 
 # ORMCONFIG
 
@@ -70,4 +69,6 @@ PA_SECRETS_SECRET=secret-key
 PA_SECRETS_USERCONFIG_password=password
 PA_SECRETS_USERCONFIG_username=test-pa
 
-#ORMCONFIG
+
+#PA-Accounts-service - 3rd Party Tokens
+PA_ACCOUNTS_TOKENS=
