--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -47,7 +47,8 @@
     "twilio": "^3.36.0",
     "typeorm": "^0.2.15",
     "typescript": "^3.3.1",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "yargs": "^3.32.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
