--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -39,7 +39,8 @@
     "rxjs": "^6.4.0",
     "tsc-watch": "^2.1.2",
     "typeorm": "^0.2.15",
-    "typescript": "^3.3.1"
+    "typescript": "^3.3.1",
+    "yargs": "^3.32.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
