--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -115,13 +115,8 @@ services:
     init: true
     container_name: 121-service
     user: node
-    environment:
-      - EXTERNAL_121_SERVICE_URL=${EXTERNAL_121_SERVICE_URL}
-      - RESET_SECRET=${RESET_SECRET}
-      - PORT_121_SERVICE=${PORT_121_SERVICE}
-      - SUBDOMAIN_121_SERVICE=${SUBDOMAIN_121_SERVICE}
-      - URL_PA_ACCOUNTS_SERVICE_API=${URL_PA_ACCOUNTS_SERVICE_API}
-      - NODE_ENV=${NODE_ENV}
+    env_file:
+      - .env
     volumes:
       - "./121-service:/home/node/app"
     ports:
@@ -141,12 +136,8 @@ services:
     init: true
     container_name: pa-accounts-service
     user: node
-    environment:
-      - WALLET_PASSWORD_ENCRYPTION_KEY=${WALLET_PASSWORD_ENCRYPTION_KEY}
-      - PORT_PA_ACCOUNTS_SERVICE=${PORT_PA_ACCOUNTS_SERVICE}
-      - SUBDOMAIN_PA_ACCOUNTS_SERVICE=${SUBDOMAIN_PA_ACCOUNTS_SERVICE}
-      - URL_121_SERVICE_API=${URL_121_SERVICE_API}
-      - NODE_ENV=${NODE_ENV}
+    env_file:
+      - .env
     volumes:
       - "./PA-accounts-service:/home/node/app"
     ports:
