--- a/services/.env.example
+++ b/services/.env.example
@@ -27,6 +27,22 @@ URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 # External connection details of the 121-service
 EXTERNAL_121_SERVICE_URL=
 
+# user configuration for seeding the database
+SECRETS_121_SERVICE_SECRET=secret-key
+USERCONFIG_121_SERVICE_PASSWORD_ADMIN=password
+USERCONFIG_121_SERVICE_EMAIL_ADMIN=admin@example.org
+USERCONFIG_121_SERVICE_PASSWORD_AID_WORKER=password
+USERCONFIG_121_SERVICE_EMAIL_AID_WORKER=aidworker@example.org
+USERCONFIG_121_SERVICE_PASSWORD_PROJECT_OFFICER=password
+USERCONFIG_121_SERVICE_EMAIL_PROJECT_OFFICER=project-officer@example.org
+USERCONFIG_121_SERVICE_PASSWORD_PROGRAM_MANAGER=password
+USERCONFIG_121_SERVICE_EMAIL_PROGRAM_MANAGER=program-manager@example.org
+USERCONFIG_121_SERVICE_COUNTRY_ID=1
+
+
+# authentication details for type-orm
+ORMCONFIG_121_SERVICE_USERNAME=global121
+ORMCONFIG_121_SERVICE_PASSWORD=
 
 # --------------------
 # PA-Accounts-service:
@@ -43,3 +59,35 @@ PORT_PA_ACCOUNTS_SERVICE=3001
 
 # Internal connection details of the 121-service
 URL_121_SERVICE_API=http://11.0.0.7:3000/api
+
+# user configuration for seeding the database
+SECRETS_PA_ACCOUNTS_SERVICE_SECRET=secret-key
+USERCONFIG_PA_ACCOUNTS_SERVICE_PASSWORD=password
+USERCONFIG_PA_ACCOUNTS_SERVICE_USERNAME=test-pa
+
+# authentication details for type-orm
+ORMCONFIG_PA_ACCOUNTS_SERVICE_USERNAME=global121
+ORMCONFIG_PA_ACCOUNTS_SERVICE_PASSWORD=
+
+
+# --------------------
+# 3rd Party API Tokens
+# --------------------
+TWILIO_SID=
+TWILIO_AUTH=
+TWILIO_TEST_TO_NUMBER=
+TWILIO_TEST_FROM_NUMBER_VOICE=
+TWILIO_TEST_FROM_NUMBER_SMS=
+
+INTERSOLVE_AUTH_TOKEN=
+INTERSOLVE_PRODUCT_CODE=
+INTERSOLVE_PACKAGE_CODE=
+INTERSOLVE_USERNAME=
+INTERSOLVE_PASSWORD=
+INTERSOLVE_EAN=
+INTERSOLVE_URL=
+
+AFRICASTALKING_API_KEY=
+AFRICASTALKING_USERNAME=
+AFRICASTALKING_PRODUCT_NAME-PRODUCT=
+AFRICASTALKING_CURRENCY_CODE=
