AB#3182 updating README

--- a/services/.env.example
+++ b/services/.env.example
@@ -28,6 +28,7 @@ URL_PA_ACCOUNTS_SERVICE_API=http://11.0.0.8:3001/api
 EXTERNAL_121_SERVICE_URL=
 
 # user configuration for seeding the database
+# can also be found in the old example.secrets.ts file
 SECRETS_121_SERVICE_SECRET=secret-key
 USERCONFIG_121_SERVICE_PASSWORD_ADMIN=password
 USERCONFIG_121_SERVICE_EMAIL_ADMIN=admin@example.org
@@ -61,6 +62,7 @@ PORT_PA_ACCOUNTS_SERVICE=3001
 URL_121_SERVICE_API=http://11.0.0.7:3000/api
 
 # user configuration for seeding the database
+# can also be found in the old example.secrets.ts file
 SECRETS_PA_ACCOUNTS_SERVICE_SECRET=secret-key
 USERCONFIG_PA_ACCOUNTS_SERVICE_PASSWORD=password
 USERCONFIG_PA_ACCOUNTS_SERVICE_USERNAME=test-pa
@@ -73,6 +75,8 @@ ORMCONFIG_PA_ACCOUNTS_SERVICE_PASSWORD=
 # --------------------
 # 3rd Party API Tokens
 # --------------------
+# moved from example.secrets
+
 TWILIO_SID=
 TWILIO_AUTH=
 TWILIO_TEST_TO_NUMBER=
