--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -78,6 +78,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-res": "^0.15.1",
+    "cypress": "^5.2.0",
     "dotenv": "^8.2.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
