--- a/interfaces/Referral-App/package.json
+++ b/interfaces/Referral-App/package.json
@@ -57,6 +57,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "10.x",
     "codelyzer": "^5.2.2",
+    "cypress": "^5.2.0",
     "dotenv": "^8.2.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
