AB#3509 Fix typo

--- a/services/.env.example
+++ b/services/.env.example
@@ -74,7 +74,7 @@ ORMCONFIG_PA_ACCOUNTS_SERVICE_PASSWORD=
 # 3rd Party API Tokens
 # --------------------
 TWILIO_SID=
-TWILIO_AUTH=
+TWILIO_AUTHTOKEN=
 TWILIO_TEST_TO_NUMBER=
 TWILIO_TEST_FROM_NUMBER_VOICE=
 TWILIO_TEST_FROM_NUMBER_SMS=
