AB#3520 Only build/deploy interfaces when explicitly defined

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -5,6 +5,7 @@
 GLOBAL_121_WEB_ROOT=/var/www/121-platform
 
 # Relative paths/folder-names of each interface
+# If one is omitted or empty, that interface will not be build/deployed.
 # Used by: `deploy.sh`
 GLOBAL_121_PA_DIR=PA-app
 GLOBAL_121_AW_DIR=AW-app
