Update/Align .env files for all interfaces

--- a/interfaces/AW-App/.env.example
+++ b/interfaces/AW-App/.env.example
@@ -1,4 +1,5 @@
 # These environment variables can be used to configure the production build
+# See usage in: src/environments/environment.prod.ts.template.js
 #
 # You can set them in a file, when you copy this example file to `.env`
 #     cp .env.example .env
@@ -6,8 +7,12 @@
 
 NG_PRODUCTION=true
 
+# Feature-switches:
 NG_IS_DEBUG=false
 NG_SHOW_DEBUG=false
 NG_USE_ANIMATION=true
 
+# APIs:
 NG_URL_121_SERVICE_API=
+
+# Third-party tokens:
