--- a/interfaces/PA-App/.env.example
+++ b/interfaces/PA-App/.env.example
@@ -1,4 +1,5 @@
 # These environment variables can be used to configure the production build
+# See usage in: environments/environment.prod.ts.template.js
 #
 # You can set them in a file, when you copy this example file to `.env`
 #     cp .env.example .env
@@ -6,14 +7,19 @@
 
 NG_PRODUCTION=true
 
+# Feature-switches:
 NG_IS_DEBUG=false
 NG_SHOW_DEBUG=false
+
 NG_USE_ANIMATION=true
 NG_ALWAYS_SHOW_TEXT_PLAYER=false
 NG_LOCAL_STORAGE=false
 
 NG_LOCALES=en
 
+# APIs:
 NG_URL_121_SERVICE_API=
 NG_URL_PA_ACCOUNT_SERVICE_API=
 NG_URL_USER_IMS_API=
+
+# Third-party tokens:
