--- a/interfaces/Referral-App/.env.example
+++ b/interfaces/Referral-App/.env.example
@@ -1,4 +1,5 @@
 # These environment variables can be used to configure the production build
+# See usage in: src/environments/environment.prod.ts.template.js
 #
 # You can set them in a file, when you copy this example file to `.env`
 #     cp .env.example .env
@@ -6,12 +7,11 @@
 
 NG_PRODUCTION=true
 
-NG_IS_DEBUG=false
-NG_SHOW_DEBUG=false
-NG_USE_ANIMATION=true
+# Feature-switches:
 
-NG_URL_121_SERVICE_API=
+# APIs:
 
+# Third-party tokens:
 # Google Sheets API
 GOOGLE_SHEETS_API_URL=
 GOOGLE_SHEETS_SHEET_ID=
