--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -34,6 +34,7 @@
     "@auth0/angular-jwt": "^4.1.2",
     "@ionic/angular": "^4.11.8",
     "@ionic/cli": "^6.11.8",
+    "@microsoft/applicationinsights-web": "^2.5.9",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.1.1",
