Refs PB#3739 AB#3749 Adding app insights

--- a/services/.env.example
+++ b/services/.env.example
@@ -91,3 +91,6 @@ AFRICASTALKING_API_KEY=
 AFRICASTALKING_USERNAME=
 AFRICASTALKING_PRODUCT_NAME=
 AFRICASTALKING_CURRENCY_CODE=
+
+APPLICATION_INSIGHT_IKEY=
+APPLICATION_INSIGHT_ENDPOINT=
