--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -36,6 +36,7 @@
     "@nestjs/testing": "^6.0.1",
     "@nestjs/typeorm": "^6.0.0",
     "africastalking": "^0.5.2",
+    "applicationinsights": "^1.8.7",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
     "crypto": "^1.0.1",
