--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.3",
+    "applicationinsights": "^1.8.7",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
     "crypto": "^1.0.1",
