Refs AB#3747 Adding env changes

--- a/interfaces/Referral-App/.env.example
+++ b/interfaces/Referral-App/.env.example
@@ -15,3 +15,7 @@ NG_PRODUCTION=true
 # Google Sheets API
 GOOGLE_SHEETS_API_URL=
 GOOGLE_SHEETS_SHEET_ID=
+
+# Application Insights
+NG_AI_IKEY=
+NG_AI_ENDPOINT=
