--- a/services/.env.example
+++ b/services/.env.example
@@ -80,6 +80,7 @@ TWILIO_PROGRAM_TOKEN_SID=
 TWILIO_PROGRAM_TOKEN_SECRET=
 TWILIO_AUTHTOKEN=
 TWILIO_WHATSAPP_NUMBER=
+TWILIO_MESSAGING_SID=MG
 
 INTERSOLVE_AUTH_TOKEN=
 INTERSOLVE_PRODUCT_CODE=
