Deploy.sh can log to file (and has more verbose output)

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -1,5 +1,9 @@
 # Variables used in deploy script / by webhook
 
+# Location of deployment log-file
+# Used by: `deploy.sh`
+GLOBAL_121_DEPLOY_LOG_FILE=/var/log/121-platform_deploy.log
+
 # Location of web-apps + VERSION file
 # Used by: `deploy.sh`, `webhook.js`
 GLOBAL_121_WEB_ROOT=/var/www/121-platform
