--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.9.1",
     "crypto": "^1.0.1",
     "easy-soap-request": "^3.3.3",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.1.1",
     "pg": "^7.9.0",
     "rxjs": "^6.4.0",
