--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -7,8 +7,8 @@
     "lint": "eslint \"src/**/*.ts\"",
     "prestart": "npm run migration:run",
     "start": "node index.js",
-    "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
-    "start:watch": "nodemon",
+    "prestart:dev": "npm run prestart",
+    "start:dev": "tsc-watch --noClear --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
     "test": "jest --config=jest.json",
@@ -20,42 +20,40 @@
   },
   "private": true,
   "dependencies": {
-    "@godaddy/terminus": "^4.1.0",
-    "@nestjs/common": "^6.0.1",
-    "@nestjs/core": "^6.0.1",
-    "@nestjs/platform-express": "^6.0.1",
-    "@nestjs/swagger": "^3.0.1",
-    "@nestjs/terminus": "^6.1.4",
-    "@nestjs/testing": "^6.0.1",
-    "@nestjs/typeorm": "^6.0.0",
+    "@godaddy/terminus": "^4.4.1",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
+    "@nestjs/platform-express": "^6.11.11",
+    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/terminus": "^6.5.6",
+    "@nestjs/testing": "^6.11.11",
+    "@nestjs/typeorm": "^6.3.4",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.3",
-    "applicationinsights": "^1.8.7",
+    "applicationinsights": "^1.8.8",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
-    "crypto": "^1.0.1",
     "cryptr": "^6.0.1",
-    "jsonwebtoken": "^8.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.9.0",
     "rxjs": "^6.4.0",
-    "tsc-watch": "^2.1.2",
-    "typeorm": "^0.2.15",
+    "swagger-ui-express": "^4.1.4",
+    "ts-node": "~8.3.0",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.25",
     "typescript": "^3.3.1",
     "yargs": "^3.32.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^24.9.1",
     "@types/node": "10.x",
-    "eslint": "^5.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-jest": "^22.7.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "jest": "^24.5.0",
-    "nodemon": "^1.18.10",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "swagger-ui-express": "^4.0.6",
-    "ts-jest": "^24.0.0",
-    "ts-node": "~8.3.0",
-    "tsconfig-paths": "^3.9.0"
+    "tsc-watch": "^2.4.0",
+    "ts-jest": "^24.0.0"
   }
 }
