--- a/services/121-service/seed-data/fsp/fsp-intersolve-no-whatsapp.json
+++ b/services/121-service/seed-data/fsp/fsp-intersolve-no-whatsapp.json
@@ -1,6 +1,7 @@
 {
   "fsp": "Intersolve-no-whatsapp",
-  "fspDisplayName": { 
+  "fspDisplayName": {
+    "ti": "ትሕስ እስ ዓ ተስት።",
     "en": "I do not have WhatsApp. Send supermarket voucher in another way."
   },
   "apiUrl": "https://trade-acc.intersolve.nl/rest/buyerapi/v1/orders",
