AB#4975 feat: use different spreadsheet for each location based on url path

--- a/interfaces/Referral-App/.env.example
+++ b/interfaces/Referral-App/.env.example
@@ -14,7 +14,8 @@ NG_PRODUCTION=true
 # Third-party tokens:
 # Google Sheets API
 GOOGLE_SHEETS_API_URL=
-GOOGLE_SHEETS_SHEET_ID=
+GOOGLE_SHEETS_SHEET_ID_AMSTERDAM=
+GOOGLE_SHEETS_SHEET_ID_UTRECHT=
 
 # Application Insights
 NG_AI_IKEY=
