feat: move region level config to env files AB#4349

--- a/interfaces/Referral-App/.env.example
+++ b/interfaces/Referral-App/.env.example
@@ -11,11 +11,13 @@ NG_PRODUCTION=true
 
 # APIs:
 
+# Regions:
+REGIONS=
+
 # Third-party tokens:
 # Google Sheets API
 GOOGLE_SHEETS_API_URL=
-GOOGLE_SHEETS_SHEET_ID_AMSTERDAM=
-GOOGLE_SHEETS_SHEET_ID_UTRECHT=
+GOOGLE_SHEETS_SHEET_IDS=
 
 # Application Insights
 NG_AI_IKEY=
