AB#4709 add AT provider channel

--- a/services/.env.example
+++ b/services/.env.example
@@ -94,6 +94,7 @@ AFRICASTALKING_API_KEY=
 AFRICASTALKING_USERNAME=
 AFRICASTALKING_PRODUCT_NAME=
 AFRICASTALKING_CURRENCY_CODE=
+AFRICASTALKING_PROVIDER_CHANNEL=
 
 APPLICATION_INSIGHT_IKEY=
 APPLICATION_INSIGHT_ENDPOINT=
